added some margins to subscribe block

--- a/css/main.css
+++ b/css/main.css
@@ -938,6 +938,7 @@ margin-bottom: 29px;
   line-height: 28px;
   letter-spacing: 0%;
   text-align: left;
+  margin-bottom: 9px;
 }
 
 .subscribe__text_bold{
@@ -948,6 +949,7 @@ margin-bottom: 29px;
   line-height: 55px;
   letter-spacing: 0%;
   text-align: left;
+  margin-bottom: 12px;
 }
 
 .subscribe__text_small{
